--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "productName": "frontend",
+  "productName": "WeatherApp",
   "version": "1.0.1",
   "description": "My Electron application description",
   "main": ".webpack/main",
@@ -21,7 +21,8 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "frontend"
+            "name": "WeatherApp",
+            "iconUrl": "https://raw.githubusercontent.com/IronManCool001/WeatherApp-Windows/main/assets/favicon.ico"
           }
         },
         {
@@ -32,7 +33,11 @@
         },
         {
           "name": "@electron-forge/maker-deb",
-          "config": {}
+          "config": {
+            "options":{
+              "icon": "./assets/favicon.ico"
+            }
+          }
         },
         {
           "name": "@electron-forge/maker-rpm",
